<resources>
    <string name="app_name">Pertuk</string>
    <string name="signup"><u>Sign Up</u></string>
    <string name="change_lang">Settings > System > Languages &amp; Input > App Languages > Pertuk > (Select Arabic)</string>
    <string name="copyright"><u>Copyright</u></string>
    <string name="community"><u>Community</u></string>
    <string name="support"><u>Support</u></string>
    <string name="privacy"><u>Privacy</u></string>
    <string name="all_authors">All Authors</string>
    <string name="all_books">All Books</string>
    <string name="oops_error">Oops! It could be an error from our server or your network conection.</string>
    <string name="find_books">Find Books...</string>
    <string name="books">Books</string>
    <string name="view_all">View All</string>
    <string name="authors">Authors</string>
    <string name="over_">Over 1.500+ Kurdish Books</string>
    <string name="about_pertuk">Programnas Library is a collection of books from other websites and blogs. you can read and download books for free.</string>
    <string name="username_email">username or email</string>
    <string name="password">password</string>
    <string name="login_pn">Login via Programnas</string>
    <string name="to_change">To change language open:</string>
    <string name="pnl">Programnas Library</string>
    <string name="my_read_books">My Read Books</string>
    <string name="log_out">Log Out</string>
    <string name="my_favourite_books">My Favourite Books</string>
    <string name="r_u_l">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="read_book_one">Read Book One</string>
    <string name="read_book_two">Read Book Two</string>
    <string name="read_book_three">Read Book Three</string>
    <string name="read_book_four">Read Book Four</string>
    <string name="read_book_five">Read Book Five</string>
    <string name="read_book_six">Read Book Six</string>
    <string name="read_book_seven">Read Book Seven</string>
    <string name="read_book_eight">Read Book Eight</string>
    <string name="read_book_nine">Read Book Nine</string>
    <string name="read_book_ten">Read Book Ten</string>
    <string name="download_book_one">Download Book One</string>
    <string name="download_book_two">Download Book Two</string>
    <string name="download_book_three">Download Book Three</string>
    <string name="download_book_four">Download Book Four</string>
    <string name="download_book_five">Download Book Five</string>
    <string name="download_book_six">Download Book Six</string>
    <string name="download_book_seven">Download Book Seven</string>
    <string name="download_book_eight">Download Book Eight</string>
    <string name="download_book_nine">Download Book Nine</string>
    <string name="download_book_ten">Download Book Ten</string>
    <string name="u_h_r">You have to logged in for adding this book to your favourite list.</string>
    <string name="u_h_f">You have to logged in for adding this book to your read list.</string>
    <string name="ok">OK</string>
</resources>