<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="12dp"
    tools:context="HomeFragment"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_items"
                android:padding="8dp">

                <LinearLayout
                    android:id="@+id/linearCategories"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" />
            </HorizontalScrollView>

            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adViewOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ads:adSize="BANNER"
                android:layout_gravity="center"
                ads:adUnitId="ca-app-pub-9877420063334339/7785116242"
                android:layout_marginTop="8dp">
            </com.google.android.gms.ads.AdView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_items"
                android:orientation="vertical"
                android:paddingLeft="12dp"
                android:paddingTop="6dp"
                android:paddingRight="12dp"
                android:paddingBottom="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:text="@string/books" />

                    <Button
                        android:id="@+id/buttonViewAllBooks"
                        style="@style/Widget.Material3.Button.OutlinedButton"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_weight="0.7"
                        android:text="@string/view_all" />

                </LinearLayout>

                <GridLayout
                    android:id="@+id/gridviewBooks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnCount="2"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:alignmentMode="alignBounds"
                    android:useDefaultMargins="true"/>

            </LinearLayout>

            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adViewTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ads:adSize="BANNER"
                android:layout_gravity="center"
                ads:adUnitId="ca-app-pub-9877420063334339/4029719971"
                android:layout_marginTop="8dp">
            </com.google.android.gms.ads.AdView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_items"
                android:orientation="vertical"
                android:paddingLeft="12dp"
                android:paddingTop="6dp"
                android:paddingRight="12dp"
                android:paddingBottom="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:text="@string/authors" />

                    <Button
                        android:id="@+id/buttonViewAllAuthors"
                        style="@style/Widget.Material3.Button.OutlinedButton"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_weight="0.7"
                        android:text="@string/view_all" />

                </LinearLayout>

                <GridLayout
                    android:id="@+id/gridviewAuthors"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:alignmentMode="alignBounds"
                    android:columnCount="2"
                    android:textAlignment="center"
                    android:useDefaultMargins="true" />

            </LinearLayout>

            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adViewThree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ads:adSize="300x250"
                android:layout_gravity="center"
                ads:adUnitId="ca-app-pub-9877420063334339/4029719971"
                android:layout_marginTop="8dp">
            </com.google.android.gms.ads.AdView>

        </LinearLayout>
    </ScrollView>

</LinearLayout>